# numgrids

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml  docs.yml
docs/: Makefile  api.rst  conf.py  getting_started.md  index.rst  installation.md  pypi_description.md  quickstart.md  requirements.txt
docs/api/: amr.rst  axes.rst  boundary.rst  curvilinear.rst  grids.rst  io.rst  operators.rst
docs/dev/: changelog.md  contributing.md  setup.md  testing.md
docs/guide/: amr.md  axes.md  boundary-conditions.md  curvilinear.md  differentiation.md  grids.md  integration.md  interpolation.md  io.md  multigrid.md
examples/: adaptive-refinement-demo.ipynb  basic-usage.ipynb  convergence-study.ipynb  differentiation.ipynb  heat-equation-rod.ipynb  how-to-define-grids.ipynb  hydrogen.ipynb  partial-derivatives.ipynb  poisson-equation-2d.ipynb  polar-cooordinates-on-unit-disk.ipynb  quantum-harmonic-oscillator.ipynb  spherical-grid.ipynb  spherical-harmonics.ipynb  wave-equation-drum.ipynb
numgrids/: __init__.py  amr.py  api.py  axes.py  boundary.py  curvilinear.py  diff.py  equidistant.py  grids.py  integration.py  interpol.py  io.py  linalg.py  plots.py  plotting.py  shapes.py  utils.py
tests/: test_amr.py  test_api.py  test_axes.py  test_boundary.py  test_curvilinear.py  test_diff.py  test_grids.py  test_integration.py  test_interpol.py  test_io.py  test_plots.py  test_plotting.py  test_shapes.py
