[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "numgrids"
version = "0.4.0"
description = "Working with numerical grids made easy."
readme = "docs/pypi_description.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Matthias Baer", email = "matthias.r.baer@googlemail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.10.1",
    "matplotlib>=3.5",
    "findiff>=0.10",
]

[project.urls]
Homepage = "https://github.com/maroba/numgrids"

[tool.setuptools.packages.find]
include = ["numgrids*"]
